--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Application_apple</string>
+    <string name="accountHint">请输入账号：</string>
+    <string name="passwordHint">请输入密码：</string>
+    <string name="loginButton">登陆</string>
+    <string name="loginToRegister">用户注册</string>
 </resources>
